--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TheOdinProject to build a To-Do List",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/iamjoker021/odin-todo-list/issues"
   },
-  "homepage": "https://github.com/iamjoker021/odin-todo-list#readme"
+  "homepage": "https://github.com/iamjoker021/odin-todo-list#readme",
+  "devDependencies": {
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
